[tool.poetry]
name = "rpi-gps-mon"
version = "0.1.0"
description = ""
authors = ["Takayuki Yano <yano.takayuki.55w@st.kyoto-u.ac.jp>"]
readme = "README.md"
packages = [{include = "rpi_gps_mon"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
pandas = "^2.0.3"
plotly = "^5.15.0"
gps3 = {git = "https://github.com/wadda/gps3.git"}
dash = "^2.11.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
